--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Grey Wolf</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Hello</h1>
+    </header>
 </body>
 </html>
