Sat baggrundsfarver op for alle sektioner på forsiden, og lagde kommentar til hvad der skal laves ved hver af dem.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,43 @@
     <title>Grey Wolf</title>
 </head>
 <body>
-    <header> 
+    <header class="header">
+    <!-- Ikoner skal være her -->
     </header>
+
+    <main class="hero">
+        <!-- Indsæt videolink her -->
+        <!-- background-color skal erstattes med video-background-->
+    </main>
+
+    <section class="genbrug">
+        <!-- Indsæt illustration af genbrug her-->
+    </section>
+
+    <article class="udvalgt">
+        <!-- Indsæt shopvaren udvalgt her-->
+    </article>
+
+    <section class="matrialer">
+        <!-- Indsæt matrialer her-->
+    </section>
+
+    <section class="certificeringer"></section>
+        <!-- Indsæt certificeringer her-->
+    </section>
+
+    <section class="mærker"></section>
+        <!-- Indsæt vores mærker her-->
+    </section>
+
+    <section class="undermenuer">'
+        <!--  Indsæt footerens undermenuer her -->
+    </section>
+
+    <footer class="footer">
+        <!-- Indsæt undermenuer her -->
+        <!-- Nyhedsbrev, kontakt og sociale medier skal være her-->
+    </footer>
+
 </body>
 </html>
