Har tilføjet skrifttypen "Poppins" ind i vores kode

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </header>
 
     <main class="hero">
+        <h1>Tester</h1>
         <!-- Indsæt videolink her -->
         <!-- background-color skal erstattes med video-background-->
     </main>
