Rettet fejl hvor undermenuer ikke blev rendered

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Grey Wolf</title>
 </head>
 <body>
-    
+
     <header class="header">
     <!-- Ikoner skal være her -->
     </header>
@@ -37,7 +37,7 @@
         <!-- Indsæt vores mærker her-->
     </section>
 
-    <section class="undermenuer">'
+    <section class="undermenuer">
         <!--  Indsæt footerens undermenuer her -->
     </section>
 
