Fulgt undervisningen indtil videre, og tilføjet elemter der skal sætte op ikonerne ved headeren

--- a/index.html
+++ b/index.html
@@ -9,8 +9,34 @@
 <body>
 
     <header class="header">
-    <!-- Ikoner skal være her -->
+        <div class="headerwrapper">
+            <a href="index.html"></a>
+            <nav>
+                <ul>
+                    <li>
+                        <a href=""></a>
+                        <!-- Menu logo -->
+                    </li>
+                    <li>
+                        <a href=""></a>
+                        <!-- Brand logo -->
+                    </li>
+                    <li>
+                        <a href=""></a>
+                        <!-- Profil logo -->
+                    </li>
+                    <li>
+                        <a href=""></a>
+                        <!-- Shopping logo -->
+                    </li>
+                </ul>
+            </nav>   
+            
+             
+        </div>
     </header>
+
+    <!-- Udstræk menu på en måde med <ul> og <li> -->
 
     <main class="hero">
         <!-- Indsæt videolink her -->
