Rettet fejl med font og indsat iconer for header (ikke sat op endnu)

--- a/index.html
+++ b/index.html
@@ -10,23 +10,27 @@
 
     <header class="header">
         <div class="headerwrapper">
-            <a href="index.html"></a>
+            <a href="index.html">Grey Wolf</a>
             <nav>
                 <ul>
                     <li>
-                        <a href=""></a>
+                        <a href="">
+                        </a>
                         <!-- Menu logo -->
                     </li>
                     <li>
-                        <a href=""></a>
-                        <!-- Brand logo -->
+                        <a href="">
+                        </a>
+                        <!-- Brand logo, skal erstattes -->
                     </li>
                     <li>
-                        <a href=""></a>
+                        <a href="">
+                        </a>
                         <!-- Profil logo -->
                     </li>
                     <li>
-                        <a href=""></a>
+                        <a href="">
+                        </a>
                         <!-- Shopping logo -->
                     </li>
                 </ul>
@@ -35,6 +39,11 @@
              
         </div>
     </header>
+
+    <img src="img/menu.png" alt="menu icon">
+    <img src="img/home.png" alt="home" icon">
+    <img src="img/profil.png" alt="profil icon">
+    <img src="img/shopping-cart.png" alt="shopping-cart icon">
 
     <!-- Udstræk menu på en måde med <ul> og <li> -->
 
