Gjort elementerne mere responsive med andre enheder i forhold til bredde

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <header class="header">
+    <header class="header section">
         <div class="headerwrapper">
             <a href="index.html">Grey Wolf</a>
             <nav>
@@ -40,43 +40,43 @@
         </div>
     </header>
 
-    <img src="img/menu.png" alt="menu icon">
-    <img src="img/home.png" alt="home" icon">
-    <img src="img/profil.png" alt="profil icon">
-    <img src="img/shopping-cart.png" alt="shopping-cart icon">
+    <img class="header-icons" id="menu" src="img/menu.png" alt="menu icon">
+    <img class="header-icons" id="home" src="img/home.png" alt="home" icon">
+    <img class="header-icons" id="profil" src="img/profil.png" alt="profil icon">
+    <img class="header-icons" id="shopping" src="img/shopping-cart.png" alt="shopping-cart icon">
 
     <!-- Udstræk menu på en måde med <ul> og <li> -->
 
-    <main class="hero">
+    <main class="hero section">
         <!-- Indsæt videolink her -->
         <!-- background-color skal erstattes med video-background-->
     </main>
 
-    <section class="genbrug">
+    <section class="genbrug section">
         <!-- Indsæt illustration af genbrug her-->
     </section>
 
-    <article class="udvalgt">
+    <article class="udvalgt section">
         <!-- Indsæt shopvaren udvalgt her-->
     </article>
 
-    <section class="matrialer">
+    <section class="matrialer section">
         <!-- Indsæt matrialer her-->
     </section>
 
-    <section class="certificeringer"></section>
+    <section class="certificeringer section"></section>
         <!-- Indsæt certificeringer her-->
     </section>
 
-    <section class="mærker"></section>
+    <section class="mærker section"></section>
         <!-- Indsæt vores mærker her-->
     </section>
 
-    <section class="undermenuer">
+    <section class="undermenue sectionr">
         <!--  Indsæt footerens undermenuer her -->
     </section>
 
-    <footer class="footer">
+    <footer class="footer section">
         <!-- Indsæt undermenuer her -->
         <!-- Nyhedsbrev, kontakt og sociale medier skal være her-->
     </footer>
