Gjort det responsive design lidt mere simpelt ved brug af body elementet i css

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         </div>
     </header>
 
-    <img class="header-icons" id="menu" src="img/menu.png" alt="menu icon">
-    <img class="header-icons" id="home" src="img/home.png" alt="home" icon">
-    <img class="header-icons" id="profil" src="img/profil.png" alt="profil icon">
-    <img class="header-icons" id="shopping" src="img/shopping-cart.png" alt="shopping-cart icon">
+    <img class="header-icons-left" id="menu" src="img/menu.png" alt="menu icon">
+    <img class="header-icons-left" id="home" src="img/home.png" alt="home" icon">
+    <img class="header-icons-right" id="profil" src="img/profil.png" alt="profil icon">
+    <img class="header-icons-right" id="shopping" src="img/shopping-cart.png" alt="shopping-cart icon">
 
     <!-- Udstræk menu på en måde med <ul> og <li> -->
 
