Små ændringer, fjernet navigationen til headeren.

--- a/index.html
+++ b/index.html
@@ -10,40 +10,12 @@
 
     <header class="header section">
         <div class="headerwrapper">
-            <a href="index.html">Grey Wolf</a>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="">
-                        </a>
-                        <!-- Menu logo -->
-                    </li>
-                    <li>
-                        <a href="">
-                        </a>
-                        <!-- Brand logo, skal erstattes -->
-                    </li>
-                    <li>
-                        <a href="">
-                        </a>
-                        <!-- Profil logo -->
-                    </li>
-                    <li>
-                        <a href="">
-                        </a>
-                        <!-- Shopping logo -->
-                    </li>
-                </ul>
-            </nav>   
-            
-             
+            <img class="header-icons-left header-icons" id="menu" src="img/menu.png" alt="menu icon">
+            <img class="header-icons-left header-icons" id="home" src="img/home.png" alt="home icon">
+            <img class="header-icons-right header-icons" id="profil" src="img/profil.png" alt="profil icon">
+            <img class="header-icons-right header-icons" id="shopping" src="img/shopping-cart.png" alt="shopping-cart icon">
         </div>
     </header>
-
-    <img class="header-icons-left" id="menu" src="img/menu.png" alt="menu icon">
-    <img class="header-icons-left" id="home" src="img/home.png" alt="home" icon">
-    <img class="header-icons-right" id="profil" src="img/profil.png" alt="profil icon">
-    <img class="header-icons-right" id="shopping" src="img/shopping-cart.png" alt="shopping-cart icon">
 
     <!-- Udstræk menu på en måde med <ul> og <li> -->
 
