Sat Headeren op. Der mangler kun links og de rigtige billeder til det

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
 
-    <header class="header section">
-        <div class="headerwrapper">
-            <img class="header-icons-left header-icons" id="menu" src="img/menu.png" alt="menu icon">
-            <img class="header-icons-left header-icons" id="home" src="img/home.png" alt="home icon">
-            <img class="header-icons-right header-icons" id="profil" src="img/profil.png" alt="profil icon">
-            <img class="header-icons-right header-icons" id="shopping" src="img/shopping-cart.png" alt="shopping-cart icon">
+    <header class="section">
+        <div class="header-icons-left">
+            <img class="header-icons" id="menu" src="img/menu.png" alt="menu icon">
+            <img class="header-icons" id="home" src="img/home.png" alt="home icon">
+        </div>
+        <div class="header-icons-right">
+            <img class="header-icons" id="profil" src="img/profil.png" alt="profil icon">
+            <img class="header-icons" id="shopping" src="img/shopping-cart.png" alt="shopping-cart icon">
         </div>
     </header>
 
@@ -44,7 +46,7 @@
         <!-- Indsæt vores mærker her-->
     </section>
 
-    <section class="undermenue sectionr">
+    <section class="undermenue section">
         <!--  Indsæt footerens undermenuer her -->
     </section>
 
