Tilføjet links så de er klar til at blive redigeret ved headeren

--- a/index.html
+++ b/index.html
@@ -10,16 +10,22 @@
 
     <header class="section">
         <div class="header-icons-left">
-            <img class="header-icons" id="menu" src="img/menu.png" alt="menu icon">
-            <img class="header-icons" id="home" src="img/home.png" alt="home icon">
+            <a href="https://www.elgiganten.dk/"> <!-- Menuside indsættes her -->
+                <img class="header-icons" id="menu" src="img/menu.png" alt="menu icon">
+            </a>
+            <a href="https://www.elgiganten.dk/"> <!-- Hovedmenu indsættes her -->
+                <img class="header-icons" id="home" src="img/home.png" alt="home icon">
+            </a>
         </div>
         <div class="header-icons-right">
-            <img class="header-icons" id="profil" src="img/profil.png" alt="profil icon">
-            <img class="header-icons" id="shopping" src="img/shopping-cart.png" alt="shopping-cart icon">
+            <a href="https://www.elgiganten.dk/"> <!-- Profil side indsættes her -->
+                <img class="header-icons" id="profil" src="img/profil.png" alt="profil icon">
+            </a>
+            <a href="https://www.elgiganten.dk/"> <!-- Kurv-side indsættes her -->
+                <img class="header-icons" id="shopping" src="img/shopping-cart.png" alt="shopping-cart icon">
+            </a>
         </div>
     </header>
-
-    <!-- Udstræk menu på en måde med <ul> og <li> -->
 
     <main class="hero section">
         <!-- Indsæt videolink her -->
