Satte en video til headeren oppe. Skal erstattes og forbedres til vores egen video

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
 
+    <!--Headeren-->
     <header class="section">
         <div class="header-icons-left">
             <a href="https://www.elgiganten.dk/"> <!-- Menuside indsættes her -->
                 <img class="header-icons" id="menu" src="img/menu.png" alt="menu icon">
             </a>
-            <a href="https://www.elgiganten.dk/"> <!-- Hovedmenu indsættes her -->
+            <a href="index.html"> <!-- Hovedmenu indsættes her -->
                 <img class="header-icons" id="home" src="img/home.png" alt="home icon">
             </a>
         </div>
@@ -27,10 +28,15 @@
         </div>
     </header>
 
-    <main class="hero section">
-        <!-- Indsæt videolink her -->
-        <!-- background-color skal erstattes med video-background-->
-    </main>
+    <!-- Heroen -->
+    <main class="hero">
+        <video autoplay muted loop id="hero-video">
+            <source src="vid/This Video Has 72,699,530 Views.mp4" type="video/mp4">
+            Din browser støtter ikke denne video. Prøv en anden browser eller genindlæs siden.
+        </video>
+    </section>
+    
+
 
     <section class="genbrug section">
         <!-- Indsæt illustration af genbrug her-->
