Tilføjet sloganet ved genbrugs-sektionen

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         </video>
     </section>
     
-
-
+    <!-- Genbrugssektion -->
     <section class="genbrug section">
-        <!-- Indsæt illustration af genbrug her-->
+        <img src="img/Forvandl.png" class="responsive-image" alt="Forvandl Dine gamle sokker til et Bæredygtigt ´Tidsløst Jakkesæt">
     </section>
+
 
     <article class="udvalgt section">
         <!-- Indsæt shopvaren udvalgt her-->
