Tilføjede "Shop Nu" knappen, og gjorde hero-videoen mere responsivt.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,15 @@
     
     <!-- Genbrugssektion -->
     <section class="genbrug section">
-        <img src="img/Forvandl.png" class="responsive-image" alt="Forvandl Dine gamle sokker til et Bæredygtigt ´Tidsløst Jakkesæt">
+        <div class="shop-slogna-beregn">
+            <a class="link-text" href="index.html">
+                <div class="button-farve button1">
+                    <p>Shop Nu</p>
+                </div>
+            </a>
+            <img src="img/Forvandl.png" class="responsive-image" alt="Forvandl Dine gamle sokker til et Bæredygtigt ´Tidsløst Jakkesæt">
+        </div>
+       
     </section>
 
 
