Tilføjet "Beregn" knappen

--- a/index.html
+++ b/index.html
@@ -39,12 +39,17 @@
     <!-- Genbrugssektion -->
     <section class="genbrug section">
         <div class="shop-slogna-beregn">
-            <a class="link-text" href="index.html">
+            <a class="link-text" href="index.html"> <!-- Ændre linket -->
                 <div class="button-farve button1">
                     <p>Shop Nu</p>
                 </div>
             </a>
             <img src="img/Forvandl.png" class="responsive-image" alt="Forvandl Dine gamle sokker til et Bæredygtigt ´Tidsløst Jakkesæt">
+            <a class="link-text" href="index.html"> <!-- Ændre linket -->
+                <div class="button-farve button1">
+                    <p>Beregn</p>
+                </div>
+            </a>
         </div>
        
     </section>
