Igangværende proces med "Vores Matrialer"

--- a/index.html
+++ b/index.html
@@ -50,18 +50,35 @@
                     <p>Beregn</p>
                 </div>
             </a>
-        </div>
-       
+        </div>  
     </section>
 
 
+
+    <!-- Udvalgt produkt (Har ikke lavet den pt.)-->
     <article class="udvalgt section">
-        <!-- Indsæt shopvaren udvalgt her-->
+        <!-- Indsæt shopvarene udvalgt her-->
     </article>
 
+
+    <!-- Matrialer -->
     <section class="matrialer section">
-        <!-- Indsæt matrialer her-->
+        <h2>Vores Matrialer</h2>
+        <div class="matriale-udvalg">
+            <img src=""> <!-- Indsæt billede -->
+            <p>Bambus</p>
+        </div>
+        <div class="matriale-udvalg">
+            <img src=""> <!-- Indsæt billede -->
+            <p>Økologisk Bomuld</p>
+        </div>
+        <div class="matriale-udvalg">
+            <img src=""> <!-- Indsæt billede -->
+            <p>Hør</p>
+        </div>
     </section>
+
+
 
     <section class="certificeringer section"></section>
         <!-- Indsæt certificeringer her-->
