Fået tilføjet matrialer. Mangler stadig billeder

--- a/index.html
+++ b/index.html
@@ -64,24 +64,40 @@
     <!-- Matrialer -->
     <section class="matrialer section">
         <h2>Vores Matrialer</h2>
-        <div class="matriale-udvalg">
-            <img src=""> <!-- Indsæt billede -->
-            <p>Bambus</p>
+        <div class="matrialer-content">
+            <div class="matriale-udvalg">
+                <img src=""> <!-- Indsæt billede -->
+                <p class="smalltext">Bambus</p>
+            </div>
+            <div class="matriale-udvalg">
+                <img src=""> <!-- Indsæt billede -->
+                <p class="smalltext">Økologisk Bomuld</p>
+            </div>
+            <div class="matriale-udvalg">
+                <img src=""> <!-- Indsæt billede -->
+                <p class="smalltext">Hør</p>
+            </div>
         </div>
-        <div class="matriale-udvalg">
-            <img src=""> <!-- Indsæt billede -->
-            <p>Økologisk Bomuld</p>
-        </div>
-        <div class="matriale-udvalg">
-            <img src=""> <!-- Indsæt billede -->
-            <p>Hør</p>
-        </div>
+        <p id="beskrivelse">Grey Wolf producerer bæredygtigt tøj med fokus på
+        <br>naturlige materialer som bambus, økologisk bomuld
+        <br>og hør. Ved at vælge disse materialer reducerer
+        <br>virksomheden deres CO2 -aftryk, da det kræver mindre 
+        <br>vand og energi at fremstille.</p>
+        <a class="link-text" href="index.html"> <!-- Ændre linket -->
+            <div class="button-farve button1">
+                <p id="readmore">Læs Mere</p>
+            </div>
+        </a>
     </section>
 
 
 
     <section class="certificeringer section"></section>
-        <!-- Indsæt certificeringer her-->
+        <h2>Certificeringer</h2>
+        <p>Grey Wolf er certificeret med GOTS, FSC og OEKO-TEX, hvilket sikrer høj standard for bæredygtighed i 
+            produktionen. GOTS garanterer økologisk tekstilproduktion, 
+            FSC-certifikatet bekræfter ansvarlig skovdrift, og 
+            OEKO-TEX sikrer, at deres tøj er fri for skadelige kemikalier.</p>
     </section>
 
     <section class="mærker section"></section>
