Lavede automatisk højde ved alle sektioner + tilføjet paragraf og header til certificeringer

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <p class="smalltext">Hør</p>
             </div>
         </div>
-        <p id="beskrivelse">Grey Wolf producerer bæredygtigt tøj med fokus på
+        <p>Grey Wolf producerer bæredygtigt tøj med fokus på
         <br>naturlige materialer som bambus, økologisk bomuld
         <br>og hør. Ved at vælge disse materialer reducerer
         <br>virksomheden deres CO2 -aftryk, da det kræver mindre 
@@ -94,10 +94,12 @@
 
     <section class="certificeringer section"></section>
         <h2>Certificeringer</h2>
-        <p>Grey Wolf er certificeret med GOTS, FSC og OEKO-TEX, hvilket sikrer høj standard for bæredygtighed i 
-            produktionen. GOTS garanterer økologisk tekstilproduktion, 
-            FSC-certifikatet bekræfter ansvarlig skovdrift, og 
-            OEKO-TEX sikrer, at deres tøj er fri for skadelige kemikalier.</p>
+        <p>Grey Wolf er certificeret med GOTS, FSC og OEKO-TEX,
+        <br>hvilket sikrer høj standard for bæredygtighed i 
+        <br>produktionen. GOTS garanterer økologisk 
+        <br>tekstilproduktion, FSC-certifikatet bekræfter
+        <br>ansvarlig skovdrift, og OEKO-TEX sikrer, at deres tøj
+        <br>er fri for skadelige kemikalier.</p>
     </section>
 
     <section class="mærker section"></section>
