Indsat certificeringer, skal fikses

--- a/index.html
+++ b/index.html
@@ -94,19 +94,25 @@
 
     <section class="certificeringer section"></section>
         <h2>Certificeringer</h2>
-        <p>Grey Wolf er certificeret med GOTS, FSC og OEKO-TEX,
+        <p class="beskrivelse">Grey Wolf er certificeret med GOTS, FSC og OEKO-TEX,
         <br>hvilket sikrer høj standard for bæredygtighed i 
         <br>produktionen. GOTS garanterer økologisk 
         <br>tekstilproduktion, FSC-certifikatet bekræfter
         <br>ansvarlig skovdrift, og OEKO-TEX sikrer, at deres tøj
         <br>er fri for skadelige kemikalier.</p>
+        <div id="afstand"></div>
     </section>
+
+
+
 
     <section class="mærker section"></section>
-        <!-- Indsæt vores mærker her-->
+        <div class="ramme">
+            <img class="certifi" src="img/certificeringer.png" alt="Forskellige certificeringr, herfra FSC, GOTS og OEKO-TEX">
+        </div>
     </section>
 
-    <section class="undermenue section">
+    <section class="undermenuer section">
         <!--  Indsæt footerens undermenuer her -->
     </section>
 
