Indsat billederne ved matrialerne, men de skal stadig finpudses

--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
         <h2>Vores Matrialer</h2>
         <div class="matrialer-content">
             <div class="matriale-udvalg">
-                <img src=""> <!-- Indsæt billede -->
+                <img src="img/Bambus.jpg"> <!-- Indsæt billede -->
                 <p class="smalltext">Bambus</p>
             </div>
             <div class="matriale-udvalg">
-                <img src=""> <!-- Indsæt billede -->
+                <img src="img/Økologisk bomuld.jpg"> <!-- Indsæt billede -->
                 <p class="smalltext">Økologisk Bomuld</p>
             </div>
             <div class="matriale-udvalg">
-                <img src=""> <!-- Indsæt billede -->
+                <img src="img/Hør.jpg"> <!-- Indsæt billede -->
                 <p class="smalltext">Hør</p>
             </div>
         </div>
@@ -103,9 +103,7 @@
         <div id="afstand"></div>
     </section>
 
-
-
-
+    <!-- -->
     <section class="mærker section"></section>
         <div class="ramme">
             <img class="certifi" src="img/certificeringer.png" alt="Forskellige certificeringr, herfra FSC, GOTS og OEKO-TEX">
