Sat sektionerne til undermenuerne op. Der skal stadig fikses hvordan de skal opsættes

--- a/index.html
+++ b/index.html
@@ -103,16 +103,31 @@
         <div id="afstand"></div>
     </section>
 
-    <!-- -->
+    <!-- Mærker -->
     <section class="mærker section"></section>
         <div class="ramme">
             <img class="certifi" src="img/certificeringer.png" alt="Forskellige certificeringr, herfra FSC, GOTS og OEKO-TEX">
         </div>
     </section>
 
-    <section class="undermenuer section">
-        <!--  Indsæt footerens undermenuer her -->
+
+    <!-- Undermenuer -->
+    <section class="undermenuer">
+        <div id="undermenu1">
+            <h3>FAQ</h3>
+        </div>
+        <div id="undermenu2">
+            <h3>Genbrugssystemet</h3>
+        </div>
+        <div id="undermenu3">
+            <h3>Betalningsmetoder</h3>
+        </div>
+        <div id="undermenu4">
+            <h3>Vilkår og betingelser</h3>
+        </div>
     </section>
+
+
 
     <footer class="footer section">
         <!-- Indsæt undermenuer her -->
