Tilføjet ikoner istedet for billeder ved Font Awesome

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/c9d62a50e6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Grey Wolf</title>
 </head>
@@ -12,21 +13,24 @@
     <header class="section">
         <div class="header-icons-left">
             <a href="https://www.elgiganten.dk/"> <!-- Menuside indsættes her -->
-                <img class="header-icons" id="menu" src="img/menu.png" alt="menu icon">
+                <i class="fa-solid fa-bars header-icons"></i>
             </a>
             <a href="index.html"> <!-- Hovedmenu indsættes her -->
-                <img class="header-icons" id="home" src="img/home.png" alt="home icon">
+                <i class="fa-solid fa-house header-icons"></i>
             </a>
         </div>
         <div class="header-icons-right">
             <a href="https://www.elgiganten.dk/"> <!-- Profil side indsættes her -->
-                <img class="header-icons" id="profil" src="img/profil.png" alt="profil icon">
+                <i class="fa-solid fa-user header-icons"></i>
             </a>
             <a href="https://www.elgiganten.dk/"> <!-- Kurv-side indsættes her -->
-                <img class="header-icons" id="shopping" src="img/shopping-cart.png" alt="shopping-cart icon">
+                <i class="fa-solid fa-cart-shopping header-icons"></i>
             </a>
         </div>
     </header>
+
+    <!--Main-->
+    <main>
 
     <!-- Heroen -->
     <main class="hero">
@@ -127,8 +131,10 @@
         </div>
     </section>
 
+    </main>
+    <!--Main Sektion slut-->
 
-
+    <!-- Footer -->
     <footer class="footer section">
         <!-- Indsæt undermenuer her -->
         <!-- Nyhedsbrev, kontakt og sociale medier skal være her-->
