--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Heroen -->
     <main class="hero">
         <video autoplay muted loop id="hero-video">
-            <source src="vid/This Video Has 72,699,530 Views.mp4" type="video/mp4">
+            <source src="vid/Grey wolf.mp4" type="video/mp4">
             Din browser støtter ikke denne video. Prøv en anden browser eller genindlæs siden.
         </video>
     </section>
