Slettet sections klassen

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <!--Headeren-->
-    <header class="section menu-header">
+    <header class="menu-header">
         <div class="header-icons-left">
             <a href="https://www.elgiganten.dk/"> <!-- Menuside indsættes her -->
                 <i class="fa-solid fa-bars header-icons"></i>
@@ -46,7 +46,7 @@
         </div> 
         
         <!-- Genbrugssektion -->
-        <section class="genbrug section">
+        <section class="genbrug">
             <div class="shop-slogna-beregn">
                 
                 <img src="img/Forvandl.png" class="responsive-image" alt="Forvandl Dine gamle sokker til et Bæredygtigt ´Tidsløst Jakkesæt">
@@ -54,7 +54,7 @@
 
                 <!-- Genbrugsberegneren -->
                 <div class="overlay" id="myOverlay"></div> <!-- Add this overlay div -->
-                <div class="popup button-farve button1" onclick="myFunction()">Beregn Nu
+                <div class="popup knap-stor knap-orange" onclick="myFunction()">Beregn Nu
                     <span class="popuptext" id="myPopup">
                         <svg class="krydset" xmlns="http://www.w3.org/2000/svg" width="24" height="23" viewBox="0 0 24 23" fill="none">
                             <path d="M1 1L23 22.0833" stroke="#8E8E8E" stroke-width="2"/>
@@ -82,13 +82,15 @@
         </section>
 
         <!-- Udvalgt produkt (Har ikke lavet den pt.)-->
-        <article class="udvalgt section">
+        <article class="udvalgt">
             <!-- Indsæt shopvarene udvalgt her-->
         </article>
 
 
+
+
         <!-- Matrialer -->
-        <section class="matrialer section">
+        <section class="matrialer">
             <h2>Vores Matrialer</h2>
             <div class="matrialer-content">
                 <div class="matriale-udvalg">
@@ -110,7 +112,7 @@
             <br>virksomheden deres CO2 -aftryk, da det kræver mindre 
             <br>vand og energi at fremstille.</p>
             <a class="link-text" href="index.html"> <!-- Ændre linket -->
-                <div class="button-farve button1">
+                <button class="knap-stor knap-orange">
                     <p id="readmore">Læs Mere</p>
                 </div>
             </a>
@@ -118,7 +120,7 @@
 
 
 
-        <section class="certificeringer section"></section>
+        <section class="certificeringer"></section>
             <h2>Certificeringer</h2>
             <p class="beskrivelse">Grey Wolf er certificeret med GOTS, FSC og OEKO-TEX,
             <br>hvilket sikrer høj standard for bæredygtighed i 
@@ -130,7 +132,7 @@
         </section>
 
         <!-- Mærker -->
-        <section class="mærker section"></section>
+        <section class="mærker"></section>
             <div class="ramme">
                 <img class="certifi" src="img/certificeringer.png" alt="Forskellige certificeringr, herfra FSC, GOTS og OEKO-TEX">
             </div>
@@ -157,7 +159,7 @@
     <!--Main Sektion slut-->
 
     <!-- Footer -->
-    <footer class="footer section">
+    <footer class="footer">
         <!-- Indsæt undermenuer her -->
         <!-- Nyhedsbrev, kontakt og sociale medier skal være her-->
     </footer>
