Lavet få ændringer og tilføjet certificeringer for hver

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Grey Wolf</title>
 </head>
 <body>
-
+3
     <!--Headeren-->
     <header class="menu-header">
         <div class="header-icons-left">
@@ -130,10 +130,10 @@
         </section>
 
         <!-- Mærker -->
-        <section class="mærker"></section>
-            <div class="ramme">
-                <img class="certifi" src="img/certificeringer.png" alt="Forskellige certificeringr, herfra FSC, GOTS og OEKO-TEX">
-            </div>
+        <section class="mærker">
+            <img id=fsc src="img/FSC.png" alt="FSC-logoet">
+            <img id=gots src="img/GOTS.png" alt="GOTS-logoet">
+            <img id=oeko src="img/Oeko-tex.png" alt="OEKO_TEX-logoet">
         </section>
 
 
